Fade in gallery images on change to avoid flicker

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -82,6 +82,15 @@ body > header {
   }
 }
 
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 main {
   padding: 3rem 0 2rem; /* mobile only */
   width: var(--width-content);
@@ -95,6 +104,9 @@ main {
       max-width: 100%;
       height: auto;
       border-radius: var(--outer-border-radius-small);
+    }
+    img.fade-in {
+      animation: 0.1s linear fade-in 0s 1;
     }
   }
 }
